--- a/sample websites/index.html
+++ b/sample websites/index.html
@@ -22,7 +22,7 @@
     <div id="map"></div>
 
     <!-- Replace the value of the key parameter with your own API key. -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzjxslPz_DHjOIsxD8eNVtf6JMenkd9XE&libraries=places&callback"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=yourKeyHere&libraries=places&callback"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
